--- a/Aulas/Aula03/atividade02.html
+++ b/Aulas/Aula03/atividade02.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-danger mb-4">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info mb-4">
             <a class="navbar-brand" href="index.html">Logo da empresa</a>
             <button
                 class="navbar-toggler"
@@ -37,6 +37,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="atividade03.html">Atividade 03</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="integrantes.html">Integrantes</a>
                     </li>
                 </ul>
             </div>
