--- a/Aulas/Aula03/integrantes.html
+++ b/Aulas/Aula03/integrantes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cálculo, Decisão e Loop</title>
+    <title>Integrantes</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -46,38 +46,25 @@
     </nav>
 
     <div class="container">
-        <H1>Cálculo, Decisão e Loop</H1>
+        <h1>Integrantes</h1>
         <br>
 
-        <div class="mb-3">
-            <input type="number" class="form-control" name="v1" id="v1" placeholder="Digite o 1º valor:" value>
+        <div class="card border-info mb-3" style="width: 30rem;">
+            <div class="card-body">
+              <h5 class="card-title">Cristian Emanuel Marcheti</h5>
+            </div>
+            <img src="images/cristian.jpg" class="card-img-bottom" alt="...">
         </div>
-        <div class="mb-3">
-            <input type="number" class="form-control" name="v2" id="v2" placeholder="Digite o 2º valor:" value>
-        </div>
-        <div class="mb-3">
-            <input type="number" class="form-control" name="v3" id="v3" placeholder="Digite o 3º valor:" value>
-        </div>
-        <button type="button" class="btn btn-outline-info" id="calcular">Calcular</button>
-        <br><br>
-        
-        <!--Source Utilities -> Flex -> Font weight and italics-->
-        <!--Source Utilities -> Text -> Margin and padding-->
-        <div class="alert alert-info d-flex align-items-center" role="alert" style="height: 40px;">
-            <p id="order" class="m-0"></p>
-        </div>
-        <div class="alert alert-info d-flex align-items-center" role="alert" style="height: 40px;">
-            <p id="median" class="m-0"></p>
-        </div>
-        <div class="alert alert-info d-flex align-items-center" role="alert" style="height: 40px;">
-            <p id="loop"  class="m-0"></p>
+        <div class="card border-info mb-3" style="width: 30rem;">
+            <div class="card-body">
+              <h5 class="card-title">Rayssa Suri Zarri Gomes</h5>
+            </div>
+            <img src="images/eu.jpg" class="card-img-bottom" alt="...">
         </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-    <script src="js/atividade03.js"></script>
 </body>
 </html>
