--- a/Aulas/Aula03/sobre.html
+++ b/Aulas/Aula03/sobre.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger mb-4">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info mb-4">
         <a class="navbar-brand" href="index.html">Logo da empresa</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
@@ -33,6 +33,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="atividade03.html">Atividade 03</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="integrantes.html">Integrantes</a>
                 </li>
             </ul>
         </div>
