--- a/Aulas/landingPageBootstrap/index.html
+++ b/Aulas/landingPageBootstrap/index.html
@@ -7,14 +7,10 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap"
-        rel="stylesheet">
-
 </head>
 
 <body>
+    <!-- NAV -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <a class="navbar-brand" href="#home">Logo da empresa</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -23,23 +19,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#sobre">Sobre</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contato">Contato</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#localizacao">Localização</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#integrantes">Integrantes</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="#localizacao">Localização</a></li>
+                <li class="nav-item"><a class="nav-link" href="#integrantes">Integrantes</a></li>
             </ul>
         </div>
     </nav>
 
-    <!--section Home-->
+    <!-- HOME -->
     <section id="home" class="d-flex">
         <div class="container">
             <h1>CURSO DESENVOLVIMENTO DE GAMES</h1>
@@ -53,47 +41,111 @@
         </div>
     </section>
 
-    <!--section Sobre-->
+    <!-- SOBRE -->
     <section id="sobre" class="d-flex bg-light">
         <div class="container text-center">
-            <h1>Logo da empresa</h1>
-            <p>Somos uma empresa especializada em cursos de desenvolvimento de games, unindo criatividade, tecnologia e prática para formar os desenvolvedores do futuro. Aqui, você aprende criando!</p>
-            <a href="#contato" class="btn btn-success scroll-btn">Fale Conosco</a>
-            
+            <h1>Sobre a empresa</h1>
+            <!-- Carrossel -->
+            <div id="carouselExample" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/1.png" class="d-block w-100" alt="Imagem 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/2.png" class="d-block w-100" alt="Imagem 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/3.png" class="d-block w-100" alt="Imagem 3">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </a>
+            </div>
+
+            <a href="#contato" class="btn btn-success scroll-btn mt-4">Fale Conosco</a>
         </div>
     </section>
 
-    <!--section Contato-->
+    <!-- CONTATO -->
     <section id="contato" class="d-flex bg-light">
         <div class="container text-center">
             <h1>Fale Conosco</h1>
-            <p>Formulário aqui</p>
-            <a href="#localizacao" class="btn btn-danger scroll-btn">Localização</a>
+            <form class="text-left mt-4">
+                <div class="form-group">
+                    <label for="nome">Nome:</label>
+                    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome">
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mail:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail">
+                </div>
+                <div class="form-group">
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea class="form-control" id="mensagem" rows="3" placeholder="Digite sua mensagem"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+            <a href="#localizacao" class="btn btn-danger scroll-btn mt-4">Localização</a>
         </div>
     </section>
 
-    <!--section Localização-->
+    <!-- LOCALIZAÇÃO -->
     <section id="localizacao" class="d-flex bg-light">
         <div class="container text-center">
             <h1>Localização</h1>
-            <p>Mapa aqui</p>
-            <a href="#integrantes" class="btn btn-danger scroll-btn">Integrantes</a>
+            <div class="map-container mt-4">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.906482865879!2d-46.65657408440627!3d-23.58152076811227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59cce5e2c89d%3A0x6aa5ef2fbb79e63a!2sAvenida%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1633629651844"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>            
+            <a href="#integrantes" class="btn btn-danger scroll-btn mt-4">Integrantes</a>
         </div>
     </section>
 
-    <!--section Integrantes-->
+    <!-- INTEGRANTES -->
     <section id="integrantes" class="d-flex bg-light">
         <div class="container text-center">
             <h1>Integrantes</h1>
-            <p>Cards e nomes</p>
-            <a href="#home" class="btn btn-danger scroll-btn">Página Inicial</a>
+            <div class="row justify-content-center mt-4">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/1.png" alt="Integrante 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Nome do Integrante 1</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/2.png" alt="Integrante 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Nome do Integrante 2</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="#home" class="btn btn-primary scroll-btn mt-4">Voltar ao Início</a>
         </div>
     </section>
 
+    <!-- FOOTER -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Nome da Empresa. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
     <script src="js/script.js"></script>
 </body>
 
