--- a/Aulas/landingPageBootstrap/index.html
+++ b/Aulas/landingPageBootstrap/index.html
@@ -35,27 +35,28 @@
                 <div class="card-body">
                     <p class="card-text">Transforme sua paixão por jogos em carreira! Aprenda a criar seus próprios
                         games do zero com aulas práticas, professores experientes e ferramentas usadas na indústria.</p>
-                    <a href="#sobre" class="btn btn-primary scroll-btn mt-2">SAIBA MAIS</a>
+                    <a href="#sobre" class="btn btn-roxo scroll-btn mt-2">SAIBA MAIS</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- SOBRE -->
-    <section id="sobre" class="d-flex bg-light">
+    <section id="sobre" class="d-flex bg-dark-custom">
         <div class="container text-center">
-            <h1>Sobre a empresa</h1>
+            <h1>SOBRE A EMPRESA</h1>
+            <p>Na nossa empresa, oferecemos cursos especializados em desenvolvimento de games, preparando você para ingressar no universo dos jogos digitais. Com aulas práticas, professores experientes e ferramentas utilizadas pela indústria, garantimos uma formação completa para quem deseja transformar a paixão por jogos em uma carreira de sucesso.</p>
             <!-- Carrossel -->
             <div id="carouselExample" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./images/1.png" class="d-block w-100" alt="Imagem 1">
+                        <img src="./images/banner1.jpg" class="d-block w-100" alt="Imagem 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/2.png" class="d-block w-100" alt="Imagem 2">
+                        <img src="./images/banner2.jpg" class="d-block w-100" alt="Imagem 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/3.png" class="d-block w-100" alt="Imagem 3">
+                        <img src="./images/banner3.jpg" class="d-block w-100" alt="Imagem 3">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
@@ -66,37 +67,37 @@
                 </a>
             </div>
 
-            <a href="#contato" class="btn btn-success scroll-btn mt-4">Fale Conosco</a>
+            <a href="#contato" class="btn btn-roxo scroll-btn mt-4">FALE CONOSCO</a>
         </div>
     </section>
 
     <!-- CONTATO -->
-    <section id="contato" class="d-flex bg-light">
+    <section id="contato" class="d-flex bg-dark-custom">
         <div class="container text-center">
-            <h1>Fale Conosco</h1>
+            <h1>FALE CONOSCO</h1>
             <form class="text-left mt-4">
                 <div class="form-group">
                     <label for="nome">Nome:</label>
-                    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome">
+                    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome: ">
                 </div>
                 <div class="form-group">
                     <label for="email">E-mail:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail">
+                    <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail: ">
                 </div>
                 <div class="form-group">
                     <label for="mensagem">Mensagem:</label>
-                    <textarea class="form-control" id="mensagem" rows="3" placeholder="Digite sua mensagem"></textarea>
+                    <textarea class="form-control" id="mensagem" rows="3" placeholder="Digite sua mensagem: "></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-roxo">ENVIAR</button>
             </form>
-            <a href="#localizacao" class="btn btn-danger scroll-btn mt-4">Localização</a>
+            <a href="#localizacao" class="btn btn-roxo scroll-btn mt-4">LOCALIZAÇÃO</a>
         </div>
     </section>
 
     <!-- LOCALIZAÇÃO -->
-    <section id="localizacao" class="d-flex bg-light">
+    <section id="localizacao" class="d-flex bg-dark-custom">
         <div class="container text-center">
-            <h1>Localização</h1>
+            <h1>LOCALIZAÇÃO</h1>
             <div class="map-container mt-4">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.906482865879!2d-46.65657408440627!3d-23.58152076811227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59cce5e2c89d%3A0x6aa5ef2fbb79e63a!2sAvenida%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1633629651844"
@@ -105,33 +106,33 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>            
-            <a href="#integrantes" class="btn btn-danger scroll-btn mt-4">Integrantes</a>
+            <a href="#integrantes" class="btn btn-roxo scroll-btn mt-4">INTEGRANTES</a>
         </div>
     </section>
 
     <!-- INTEGRANTES -->
-    <section id="integrantes" class="d-flex bg-light">
+    <section id="integrantes" class="d-flex bg-dark-custom">
         <div class="container text-center">
-            <h1>Integrantes</h1>
+            <h1>INTEGRANTES</h1>
             <div class="row justify-content-center mt-4">
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="./images/1.png" alt="Integrante 1">
+                        <img class="card-img-top" src="./images/rayssa.jpg" alt="Integrante 1">
                         <div class="card-body">
-                            <h5 class="card-title">Nome do Integrante 1</h5>
+                            <h5 class="card-title">RAYSSA SURI ZARRI GOMES</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="./images/2.png" alt="Integrante 2">
+                        <img class="card-img-top" src="./images/cristian.jpg" alt="Integrante 2">
                         <div class="card-body">
-                            <h5 class="card-title">Nome do Integrante 2</h5>
+                            <h5 class="card-title">CRISTIAN EMANUEL MARCHETI</h5>
                         </div>
                     </div>
                 </div>
             </div>
-            <a href="#home" class="btn btn-primary scroll-btn mt-4">Voltar ao Início</a>
+            <a href="#home" class="btn btn-roxo scroll-btn mt-4">VOLTAR AO ÍNICIO</a>
         </div>
     </section>
 
