--- a/Aulas/landingPageBootstrap/index.html
+++ b/Aulas/landingPageBootstrap/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <a class="navbar-brand" href="#home">Logo da empresa</a>
+        <a class="navbar-brand" href="#home">CODEGAME</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
