--- a/Aulas/landingPageBootstrap/index.html
+++ b/Aulas/landingPageBootstrap/index.html
@@ -77,15 +77,15 @@
             <h1>FALE CONOSCO</h1>
             <form class="text-left mt-4">
                 <div class="form-group">
-                    <label for="nome">Nome:</label>
+                    <label for="nome">Nome</label>
                     <input type="text" class="form-control" id="nome" placeholder="Digite seu nome: ">
                 </div>
                 <div class="form-group">
-                    <label for="email">E-mail:</label>
+                    <label for="email">E-mail</label>
                     <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail: ">
                 </div>
                 <div class="form-group">
-                    <label for="mensagem">Mensagem:</label>
+                    <label for="mensagem">Mensagem</label>
                     <textarea class="form-control" id="mensagem" rows="3" placeholder="Digite sua mensagem: "></textarea>
                 </div>
                 <button type="submit" class="btn btn-roxo">ENVIAR</button>
