--- a/Aulas/Revisao/pages/integrantes.html
+++ b/Aulas/Revisao/pages/integrantes.html
@@ -39,7 +39,7 @@
     <div class="container">
         <main>
             <h1>Integrantes</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xfVUmd545KU?si=0WdiXDoa1tPx2-PE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="mb-3" width="560" height="315" src="https://www.youtube.com/embed/xfVUmd545KU?si=0WdiXDoa1tPx2-PE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="card border-dark mb-3" style="width: 30rem;">
                     <div class="card-body">
                         <h5 class="card-title">Cristian Emanuel Marcheti</h5>
