--- a/Aulas/Revisao/integrantes.html
+++ b/Aulas/Revisao/integrantes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Integrantes</title>
 </head>
 
@@ -44,13 +44,13 @@
                     <div class="card-body">
                         <h5 class="card-title">Cristian Emanuel Marcheti</h5>
                     </div>
-                    <img src="../images/cristian.jpg" class="card-img-bottom" alt="Cristian">
+                    <img src="images/cristian.jpg" class="card-img-bottom" alt="Cristian">
                 </div>
                 <div class="card border-dark mb-3" style="width: 30rem;">
                     <div class="card-body">
                         <h5 class="card-title">Rayssa Suri Zarri Gomes</h5>
                     </div>
-                    <img src="../images/eu.jpg" class="card-img-bottom" alt="Rayssa">
+                    <img src="images/eu.jpg" class="card-img-bottom" alt="Rayssa">
                 </div>
         </main>
     </div>
