--- a/Aulas/Revisao/localizacao.html
+++ b/Aulas/Revisao/localizacao.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Localização</title>
 </head>
 
@@ -42,7 +42,7 @@
         <div class="row mb-3">
           <div class="col-4">
             <div class="card" style="width: 18rem;">
-              <img src="../images/medicina.jpg" class="card-img-top" style="height: 15rem;" alt="Medicina">
+              <img src="images/medicina.jpg" class="card-img-top" style="height: 15rem;" alt="Medicina">
               <div class="card-body">
                 <p class="card-text">Com a ajuda da Inteligência Artificial, o diagnóstico de exames passa a ser feito
                   com mais velocidade e precisão. Na pandemia, a IA vem sendo de extrema importância para o
@@ -53,7 +53,7 @@
           </div>
           <div class="col-6">
             <div class="card" style="width: 18rem;">
-              <img src="../images/transporte.png" class="card-img-top" style="height: 15rem;"alt="Transporte">
+              <img src="images/transporte.png" class="card-img-top" style="height: 15rem;"alt="Transporte">
               <div class="card-body">
                 <p class="card-text">Para o transporte público, a IA auxilia no rastreamento e previsão de horários. No
                   transporte privado, essa tecnologia com o auxílio de GPS escolhe as melhores rotas.
