--- a/Aulas/crud_firebase/usuarios.html
+++ b/Aulas/crud_firebase/usuarios.html
@@ -8,6 +8,25 @@
 </head>
 
 <body class="bg-light">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Ínicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="usuarios.html">Usuários</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
 
     <div class="container mt-5">
         <h2 class="mb-4">Cadastro de Usuários</h2>
@@ -53,7 +72,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Script personalizado -->
-    <script src="script.js"></script>
+    <script src="usuarios.js"></script>
 </body>
 
 </html>
