--- a/Aulas/crud_firebase/alunos.html
+++ b/Aulas/crud_firebase/alunos.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
+    <title>Alunos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
@@ -37,27 +38,6 @@
             </div>
         </nav>
     </header>
-
-    <main>
-        <div class="container mt-5">
-            <h2 class="mb-4">Bem-vindo ao CRUD com Firebase e jQuery</h2>
-            <p>Use o menu acima para navegar entre as páginas.</p>
-            <p>Na página de usuários, você poderá cadastrar, listar, editar e excluir usuários.</p>
-            
-            <div class="card border-dark mb-3" style="width: 30rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Cristian Emanuel Marcheti</h5>
-                </div>
-                <img src="images/cristian.jpg" class="card-img-bottom" alt="Cristian">
-            </div>
-            <div class="card border-dark mb-3" style="width: 30rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Rayssa Suri Zarri Gomes</h5>
-                </div>
-                <img src="images/eu.jpg" class="card-img-bottom" alt="Rayssa">
-            </div>
-        </div>
-    </main>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
