--- a/Aulas/crud_firebase/usuarios.html
+++ b/Aulas/crud_firebase/usuarios.html
@@ -2,77 +2,84 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <title>CRUD com Firebase e jQuery</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>CRUD com Firebase e jQuery</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-light">
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Ínicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="usuarios.html">Usuários</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Ínicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="usuarios.html">Usuários</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="alunos.html">Alunos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cursos.html">Cursos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    <div class="container mt-5">
-        <h2 class="mb-4">Cadastro de Usuários</h2>
+  <div class="container mt-5">
+    <h2 class="mb-4">Cadastro de Usuários</h2>
 
-        <!-- Formulário -->
-        <form id="formUsuario" class="row g-3">
-            <input type="hidden" id="id">
-            <div class="col-md-6">
-                <label for="name" class="form-label">Nome</label>
-                <input type="text" id="txtnome" class="form-control" required>
-            </div>
-            <div class="col-md-6">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" id="txtemail" class="form-control" required>
-            </div>
-            <div class="col-12">
-                <button type="submit" class="btn btn-primary">Salvar</button>
-            </div>
-        </form>
+    <!-- Formulário -->
+    <form id="formUsuario" class="row g-3">
+      <input type="hidden" id="id">
+      <div class="col-md-6">
+        <label for="name" class="form-label">Nome</label>
+        <input type="text" id="txtnome" class="form-control" required>
+      </div>
+      <div class="col-md-6">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="txtemail" class="form-control" required>
+      </div>
+      <div class="col-12">
+        <button type="submit" class="btn btn-primary">Salvar</button>
+      </div>
+    </form>
 
-        <!-- Lista -->
-        <h4 class="mt-5">Usuários</h4>
-        <table class="table table-bordered mt-3">
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Email</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody id="tabelaUsuarios">
-                <!-- Usuários serão inseridos aqui -->
-            </tbody>
-        </table>
-    </div>
+    <!-- Lista -->
+    <h4 class="mt-5">Usuários</h4>
+    <table class="table table-bordered mt-3">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Email</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody id="tabelaUsuarios">
+        <!-- Usuários serão inseridos aqui -->
+      </tbody>
+    </table>
+  </div>
 
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 
-    <!-- jQuery + Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- jQuery + Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Script personalizado -->
-    <script src="usuarios.js"></script>
+  <!-- Script personalizado -->
+  <script src="./scripts/usuarios.js"></script>
 </body>
 
 </html>
