--- a/Aulas/crud_firebase/cursos.html
+++ b/Aulas/crud_firebase/cursos.html
@@ -38,8 +38,46 @@
         </nav>
     </header>
 
+    <div class="container mt-5">
+        <h2 class="mb-4">Cadastro de Cursos</h2>
+
+        <!-- Formulário -->
+        <form id="formCursos" class="row g-3">
+            <input type="hidden" id="id">
+            <div class="col-md-6">
+                <label for="name" class="form-label">Nome</label>
+                <input type="text" id="txtnome" class="form-control" required>
+            </div>
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
+        </form>
+
+        <!-- Lista -->
+        <h4 class="mt-5">Cursos</h4>
+        <table class="table table-bordered mt-3">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody id="tabelaCursos">
+                <!-- Usuários serão inseridos aqui -->
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+
+    <!-- jQuery + Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Script personalizado -->
+    <script src="./scripts/cursos.js"></script>
 </body>
 
 </html>
